# Heimdall

./: .gitignore  Android.mk  CMakeLists.txt  LICENSE  README  README.md  msvc2010.sln  msvc2012.sln
.github/: FUNDING.yml
.github/workflows/: build.yml
Heimdall/: msvc2010.sln
Heimdall/Linux/: README
Heimdall/OSX/: README.txt  install-kext.sh
Heimdall/Win32/: README.txt
Heimdall/heimdall/: Makefile.in  aclocal.m4  config.h.in  description-pak  heimdall.vcxproj.filters  postremove-pak
Heimdall/heimdall-frontend/: Qt4VSPropertySheet.props  aboutform.ui  heimdall-frontend.pri  heimdall-frontend.pro  heimdall-frontend.vcxproj  heimdall-frontend.vcxproj.filters
Heimdall/heimdall-frontend/Source/: main.cpp
Heimdall/heimdall-frontend/doc-pak/: README
Heimdall/heimdall/autom4te.cache/: output.0  requests  traces.1
Heimdall/heimdall/source/: BridgeManager.cpp  DeviceInfoResponse.h  DumpPartPitFilePacket.h  DumpResponse.h  EndFileTransferPacket.h  FileTransferPacket.h  FlashPartFileTransferPacket.h  Heimdall.h  InboundPacket.h  InterfaceManager.cpp  OutboundPacket.h  ResponsePacket.h  main.cpp
Heimdall/libusb-1.0/: Makefile  config.status  configure
Heimdall/libusb-1.0/autom4te.cache/: output.1  requests  traces.0
Heimdall/libusb-1.0/doc/: Makefile.in  doxygen.cfg
Heimdall/libusb-1.0/examples/: Makefile.in
Heimdall/libusb-1.0/libusb/: Makefile  Makefile.in
Linux/: 60-heimdall-galaxy-s.rules  README  README.save  README.txt  install-udev-rules.sh
OSX/: README.txt  install-kext.sh
OSX/heimdall.kext/Contents/: Info.plist
OSX/heimdall.kext/Contents/_CodeSignature/: CodeDirectory  CodeRequirements  CodeSignature
Unix/: README
Win32/: README.txt
cmake/: DefineCompilerFlags.cmake  Findlibusb.cmake  LargeFiles.c  LargeFiles.cmake  LargeFiles64.c  LargeFilesWindows.c
heimdall/: 60-heimdall-galaxy-s.rules  60-heimdall.rules  CMakeLists.txt  LICENSE  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h  config.h.in  config.h.in~  configure  configure.ac  description-pak  heimdall.vcxproj  heimdall.vcxproj.filters  postinstall-pak
heimdall-frontend/: CMakeLists.txt  Qt4VSPropertySheet.props  aboutform.ui  description-pak  heimdall-frontend.pri  heimdall-frontend.pro  heimdall-frontend.vcxproj  heimdall-frontend.vcxproj.filters  heimdall.appdata.xml  heimdall.desktop  mainwindow.qrc  mainwindow.ui
heimdall-frontend/Source/: Alerts.cpp  Alerts.h  FirmwareInfo.cpp  FirmwareInfo.h  PackageData.cpp  PackageData.h  Packaging.cpp  Packaging.h  aboutform.cpp  aboutform.h  main.cpp  mainwindow.cpp  mainwindow.h
heimdall-frontend/doc-pak/: LICENSE  README
heimdall-frontend/lib/win32/: zlib.lib
heimdall-frontend/source/: Alerts.cpp  Alerts.h  FirmwareInfo.cpp  FirmwareInfo.h  GZipFile.cpp  GZipFile.h  PackageData.cpp  PackageData.h  Packaging.cpp  Packaging.h  aboutform.cpp  aboutform.h  main.cpp  mainwindow.cpp  mainwindow.h
heimdall-frontend/source/qml/: ArrayExtensions.js  DropFiles.qml  DropFilesForm.qml  DropFilesForm.ui.qml  FileUtils.js  Root.qml  RootForm.qml  RootForm.ui.qml  main.qml  qml.qrc  resources.qrc
heimdall-frontend/source/qml/bindings/: Firmware.cpp  Firmware.h
heimdall/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
heimdall/doc-pak/: LICENSE  README
heimdall/source/: ._BridgeManager.cpp  Android.mk  Arguments.cpp  Arguments.h  BeginDumpPacket.h  BeginSessionPacket.h  BridgeManager.cpp  BridgeManager.h  ClosePcScreenAction.cpp  ClosePcScreenAction.h  ControlPacket.h  DetectAction.cpp  DetectAction.h  DeviceInfoPacket.h  DeviceInfoResponse.h  DeviceTypePacket.h  DownloadPitAction.cpp  DownloadPitAction.h  DumpAction.cpp  DumpAction.h  DumpPartFileTransferPacket.h  DumpPartPitFilePacket.h  DumpResponse.h  EnableTFlashPacket.h  EndFileTransferPacket.h  EndModemFileTransferPacket.h  EndPhoneFileTransferPacket.h  EndPitFileTransferPacket.h  EndSessionPacket.h  FilePartSizePacket.h  FileTransferPacket.h  FlashAction.cpp  FlashAction.h  FlashPartFileTransferPacket.h  FlashPartPitFilePacket.h  Heimdall.h  HelpAction.cpp  HelpAction.h  InboundPacket.h  InfoAction.cpp  (+32 more)
libpit/: CMakeLists.txt  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  libpit.vcxproj  libpit.vcxproj.filters
libpit/Source/: libpit.cpp  libpit.h
libpit/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libpit/source/: libpit.cpp  libpit.h
libusb-1.0/: AUTHORS  Makefile.in  _libusb_static_2008.vcxproj.filters  _libusb_static_2010.vcxproj  aclocal.m4  config.h  config.h.in  configure  libtool  libusb-1.0.pc  ltmain.sh
libusb-1.0/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libusb-1.0/doc/: Makefile  Makefile.in
libusb-1.0/examples/: Makefile  Makefile.in
libusb-1.0/lib/Win32/Debug/: libusb-1.0.lib
libusb-1.0/lib/Win32/Release/: libusb-1.0.lib
libusb-1.0/libusb/: Makefile.in
libusb/lib/Win32/Debug/: libusb-1.0.lib
libusb/lib/Win32/Release/: libusb-1.0.lib
libusbx-1.0/lib/Win32/Debug/: libusb-1.0.lib
libusbx-1.0/lib/Win32/Release/: libusb-1.0.lib
